# TuneCoach

./: .gitignore  .main.py.swp  Contributions  MANIFEST.in  README.md  TestTuner.py  __init__.py  main.py  setup.py  test.session  test1.session  test2.session
PitchDetection/: .gitignore  CMakeCache.txt  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  FeedbackSystem.cpp  FeedbackSystem.h  Makefile  PitchDetection  PitchDetector.h  TunerStream.cpp  TunerStream.h  bridge.cpp  bridge.h  cmake_install.cmake  main.cpp  pitch_detection.cpp  processing_utilities.cpp  processing_utilities.h
PitchPython/: FeedbackSystem.py  processing_utilities.py
TuneCoach/: main.py  test 2.session
TuneCoach/gui/: FAQWindow.py  (+25 more)
bridge/: PitchDetector.py
gui/: BinaryStorage.py  EndSessionWindow.py  FAQWindow.py  IntroWindow.py  LoadSessionWindow.py  MainWindow.py  MoreInfoWindow.py  NewSessionWindow.py  PitchDisplay.py  RemoveWindow.py  SaveWindow.py  SessionDiagnostics.py  SessionHistory.py  TunerSettingsWindow.py  TutorialWindow.py  __init__.py  constants.py  end_session_window.py  faq_window.py  gui.py  indicatorlight.py  load_session_window.py  main_window.py  master.py  menu.py  more_info_window.py  new_session_window.py  pitchDisplay.py  practice_session.py  remove_window.py  save_window.py  session_diagnostics.py  session_history.py  tuner_settings_window.py  tutorial_window.py
python_bridge/: AudioManager.py  FeedbackSystem.py  Session.py  __init__.py  feedback_system.py  pitch_utilities.py  test.py
src/: main.py
tunecoach.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+49 files in other folders)
